# software-coding-task

./: .env.local  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  docker-compose.yml  extra_info.txt  plan.md  pnpm-lock.yaml  run_migration.py  test_dashboard.md  updated_plan.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  auth.py  config.py  constants.py  create_sample_model.py  database.py  logging_config.py  main.py  meridian_adapter.py  mmm_service.py  models.py  package.json  pyproject.toml  run_migration.py  run_tests.py  schemas.py  user_service.py
apps/api/middleware/: validation.py
apps/api/models/: dashboard.py  user.py
apps/api/routers/: auth.py  dashboard.py  mmm.py  mmm_dev.py
apps/api/services/: ai_service.py  audit_service.py  auth_service.py  cache_service.py  data_service.py  database_service.py  feature_flags.py  migration_service.py  mock_ai_service.py  rbac_service.py
apps/api/tests/: conftest.py  test_auth.py  test_cache_service.py  test_caching.py  test_data_service.py  test_integration.py  test_migrations.py  test_mmm_endpoints.py  test_rate_limiting.py  test_rbac.py  test_validation.py
apps/api/utils/: rate_limiting.py  security.py
apps/web/: Dockerfile  jest.config.js  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
apps/web/__tests__/: auth.test.tsx
apps/web/app/: page.tsx
apps/web/components/: data-source-indicator.tsx  error-boundary.tsx  providers.tsx  route-guard.tsx  theme-toggle.tsx
migrations/: 001_create_users_table.sql
(+44 files in other folders)
